tests/parser/error/definition_ident.st
def 12 := 3
